--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "vitest": "^3.0.5"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.96",
     "chalk": "^5.4.1",
     "express": "^5.1.0",
+    "mongoose": "^8.14.0",
     "request": "^2.88.2",
     "systeminformation": "^5.25.11",
     "yargs": "^17.7.2"
