Readme con ejecución

--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "type": "module",
   "main": "pokemon.js",
   "scripts": {
-    "dev": "tsc-watch --onSuccess \"node dist/index.js\"",
-    "e1": "tsc-watch --onSuccess \"node dist/ejercicio-1/pokemon.js\"",
-    "e2": "tsc-watch --onSuccess \"node dist/ejercicio-2/artista.js\"",
+    "app": "node dist/index.js",
     "doc": "typedoc",
     "test": "vitest run",
     "coverage": "vitest run --coverage --coverage.include src/"
