--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-tsdoc": "^0.4.0",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
+    "supertest": "^7.1.0",
     "tsc-watch": "^6.2.1",
     "typedoc": "^0.27.6",
     "typescript-eslint": "^8.23.0",
