--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@jest/globals": "^29.7.0",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.13",
     "@types/request": "^2.48.12",
+    "@types/supertest": "^6.0.3",
     "@types/yargs": "^17.0.33",
     "@vitest/coverage-v8": "^3.0.5",
+    "env-cmd": "^10.1.0",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-tsdoc": "^0.4.0",
@@ -31,7 +34,7 @@
     "typedoc": "^0.27.6",
     "typescript-eslint": "^8.23.0",
     "vite": "^6.1.0",
-    "vitest": "^3.1.2"
+    "vitest": "^3.1.3"
   },
   "dependencies": {
     "@types/mongoose": "^5.11.96",
