--- a/package.json
+++ b/package.json
@@ -1,50 +1,40 @@
 {
-  "name": "prct05-objects-classes",
+  "name": "notes-rest-api",
   "version": "1.0.0",
-  "type": "module",
-  "main": "pokemon.js",
+  "main": "dist/index.js",
   "scripts": {
-    "app": "node dist/index.js",
-    "doc": "typedoc",
-    "test": "vitest run",
-    "coverage": "vitest run --coverage --coverage.include src/",
-    "build": "npm install --legacy-peer-deps && vite build"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsc-watch --onSuccess \"env-cmd -f ./config/dev.env node dist/index.js\"",
+    "test": "env-cmd -f ./config/test.env vitest run",
+    "coverage": "env-cmd -f ./config/test.env vitest run --coverage --coverage.include **/src/*"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@jest/globals": "^29.7.0",
+    "@eslint/js": "^9.25.1",
     "@types/express": "^5.0.1",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.13",
-    "@types/request": "^2.48.12" , 
     "@types/supertest": "^6.0.3",
-    "@types/yargs": "^17.0.33",
-    "@vitest/coverage-v8": "^3.0.5",
+    "@types/validator": "^13.15.0",
+    "@vitest/coverage-v8": "^3.1.2",
     "env-cmd": "^10.1.0",
-    "eslint": "^9.19.0",
-    "eslint-config-prettier": "^10.0.1",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-tsdoc": "^0.4.0",
-    "globals": "^15.14.0",
-    "prettier": "^3.4.2",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3",
     "supertest": "^7.1.0",
     "tsc-watch": "^6.2.1",
-    "typedoc": "^0.27.6",
-    "typescript-eslint": "^8.23.0",
-    "vite": "^6.1.0",
-    "vitest": "^3.1.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.31.1",
+    "vitest": "^3.1.2"
   },
   "dependencies": {
-    "@types/mongoose": "^5.11.96",
-    "chalk": "^5.4.1",
     "express": "^5.1.0",
-    "mongodb": "^6.16.0",
-    "mongoose": "^8.14.0",
-    "request": "^2.88.2",
-    "systeminformation": "^5.25.11",
-    "yargs": "^17.7.2"
+    "mongoose": "^8.14.1",
+    "validator": "^13.15.0"
   }
 }
