--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/index.js",
     "dev": "tsc-watch --onSuccess \"env-cmd -f ./config/dev.env node dist/index.js\"",
     "test": "env-cmd -f ./config/test.env vitest run",
-    "coverage": "env-cmd -f ./config/test.env vitest run --coverage --coverage.include **/src/*"
+    "coverage": "env-cmd -f ./config/test.env vitest run --coverage --coverage.include **/src/*",
+    "doc": "typedoc"
   },
   "type": "module",
   "keywords": [],
@@ -23,7 +24,7 @@
     "env-cmd": "^10.1.0",
     "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-tsdoc": "^0.4.0", 
+    "eslint-plugin-tsdoc": "^0.4.0",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "supertest": "^7.1.0",
